--- a/index.html
+++ b/index.html
@@ -165,6 +165,8 @@
     { src: "https://fleet-kingfish-basically.ngrok.app/images/set (9)/20.jpg", audio: "https://fleet-kingfish-basically.ngrok.app/audio/set (9)/20.mp3" },
     { src: "https://fleet-kingfish-basically.ngrok.app/images/set (9)/21.jpg", audio: "https://fleet-kingfish-basically.ngrok.app/audio/set (9)/21.mp3" },
     { src: "https://fleet-kingfish-basically.ngrok.app/images/set (9)/22.jpg", audio: "https://fleet-kingfish-basically.ngrok.app/audio/set (9)/22.mp3" },
+    { src: "https://fleet-kingfish-basically.ngrok.app/images/set (9)/22.jpg", audio: "https://fleet-kingfish-basically.ngrok.app/audio/set (9)/23.mp3" },
+    { src: "https://fleet-kingfish-basically.ngrok.app/images/set (9)/22.jpg", audio: "https://fleet-kingfish-basically.ngrok.app/audio/set (9)/24.mp3" },
     { src: "https://fleet-kingfish-basically.ngrok.app/images/set (1)/Submit.jpg", audio: "null" }
     ];
 
